# Sodoku

./: Cargo.toml  LICENSE  README.md  sodoku-1-solution.txt  sudoku-2.txt
leaderboard/: leaderBoard.txt
src/: app_state.rs  button.rs  display.rs  error.rs  grid.rs  lost_state.rs  main.rs  menu_state.rs  parser.rs  play_state.rs  solver.rs  solver_state.rs  win_state.rs
sudoku_not_resolved/: sudoku_2.txt  sudoku_3.txt  sudoku_4.txt  sudoku_5.txt  sudoku_7.txt  sudoku_9.txt
